ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric2/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric2/input.ts:2:34
  |
2 |     interfaceICompiledExpression {
  |                                  ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric2/input.ts:2:5
  |
2 |     interfaceICompiledExpression {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

